* Version 1.2.3 (unreleased)
- occtl: added machine-readable "raw_connected_at" field for user stats
- Modified "Camouflage" functionality to allow AnyConnect clients (#544)


* Version 1.2.2 (released 2023-09-21)
- Fix session and accounting data tracking of ocserv. This
  reverts fix for #444 (#541)
- No longer account ICMP and IGMP data for idle session detection


* Version 1.2.1 (released 2023-08-22)
- Accept the Clavister OneConnect VPN Android client (#485)
- No longer require to set device name per vhost (#480)
- Account the correct number of points when proxyproto is in use (#529)
- nuttcp tests were replaced with iperf3 that is available
  in more environments
- occtl: fix duplicate key in `occtl --json show users` output


* Version 1.2.0 (released 2023-07-11)
- Add support for Cisco Enterprise phones to authenticate via
  the /svc endpoint and the 'cisco-svc-client-compat' config
  option.
- Enhanced radius group support to enable radius servers send multiple
  group class attributes (#489). See doc/README-radius.md for
  more information.
- Enhanced the seccomp filters to open files related to FIPS compliance
  on SuSe (#491)
- Added "Camouflage" functionality that makes ocserv look
  like a web server to unauthorized parties.
- Avoid login failure when the end point of server URI
  contains a query string.
- Make sure we print proper JSON with `occtl --debug --json` (#517)
- Eliminated the need for using the gnulib portability library.


* Version 1.1.7 (released 2023-05-07)
- Emit a LOG_ERR error message with plain authentication fails
- The bundled inih was updated to r56.
- The bundled protobuf-c was updated to 1.4.1.
- Enhanced the seccomp filters for ARMv7 compatibility and musl libc
- HTTP headers always capitalised as in RFC 9110


* Version 1.1.6 (released 2022-02-17)
- Fixed compatibility with clients on Windows ARM64
- Added futex() to the accepted list of seccomp. It is required
  by Fedora 36's libc.