@@ -1,4 +1,5 @@
 * Version 1.2.3 (unreleased)
+- Warn when more than 2 DNS server IPv6 addresses are sent by Radius.
 - occtl: added machine-readable "raw_connected_at" field for user stats
 - Modified "Camouflage" functionality to allow AnyConnect clients (#544)
 
